Calling gtk_window_resize() on fixed-size window freezes updates on Wayland
GTK 3.24.21
Calling gtk_window_resize()
on a top-level window freezes updates for it until it receives a corresponding configure event. However, since commit 04b7853a, no configure event is delivered under Wayland if the window has a fixed size (i.e., it's maximized, tiled, or full-screen), causing the UI to freeze until a configure event is delivered for some other reason (e.g., switching windows, resizing the window manually, etc.)
See gimp#5324 (closed).